# tfi-chitravaani

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  app.py  pyproject.toml  requirements.txt  streamlit_app.py
.gitlab/issue_templates/: bug.md
.gitlab/merge_request_templates/: default.md
data/: movies.json
rag/: rag_pipeline.py
